--- a/src/app/question/question.component.scss
+++ b/src/app/question/question.component.scss
@@ -1,38 +1,70 @@
 .content {
-    display: flex;
+  display: flex;
 }
 
 .task {
-    width: 65vw;
-    height: 100vh;
-    border-right: 2px solid black;  
+  width: 65vw;
+  height: 100vh;
+  border-right: 2px solid black;
+  padding-top: 30px;
+
+  img {
+    width: 64vw;
+  }
 }
 
 .btn {
-    display: flex;
+  display: flex;
+  justify-content: space-around;
+
+  .btn-submit {
+    background-color: #40739e;
+    font-size: 16px;
+    font-family: 'Lucida Sans', Verdana, sans-serif;
+    border: 1px solid #2f3640;
+    border-radius: 2px;
+    padding: 10px;
+    cursor: pointer;
+  }
+
+  .btn-next {
+    background-color: #40739e;
+    font-size: 16px;
+    font-family: 'Lucida Sans', Verdana, sans-serif;
+    border: 1px solid #2f3640;
+    border-radius: 2px;
+    padding: 10px;
+    cursor: pointer;
+  }
 }
 
 .progress-bar {
-    display: flex;
-    width: 35vw;
-    border-bottom: 1px solid black;
+  display: flex;
+  width: 35vw;
+  height: 20px;
+  border: 1px solid black;
 }
 
-.block {
-    width: 34%;
-    border-right: 1px solid black; 
+.correctly {
+  background-color: green;
+}
+
+.wrong {
+  background-color: red;
 }
 
 .answer {
-    margin: 20px;
+  margin: 20px;
+  font-size: 16px;
+  font-family: 'Lucida Sans', Verdana, sans-serif;
 }
 
 .answer-form {
-    display: flex;
-    flex-direction: column;
-    margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0;
 
-    span {
-        padding: 20px;
-    }
+  span {
+    padding: 20px;
+  }
 }
