--- a/src/app/question/question.component.scss
+++ b/src/app/question/question.component.scss
@@ -17,24 +17,16 @@
   display: flex;
   justify-content: space-around;
 
-  .btn-submit {
-    background-color: #40739e;
+  .btn-submit, .btn-next {
+    background-color: #4a69bd;
     font-size: 16px;
     font-family: 'Lucida Sans', Verdana, sans-serif;
-    border: 1px solid #2f3640;
+    font-weight: 600;
     border-radius: 2px;
     padding: 10px;
     cursor: pointer;
-  }
-
-  .btn-next {
-    background-color: #40739e;
-    font-size: 16px;
-    font-family: 'Lucida Sans', Verdana, sans-serif;
-    border: 1px solid #2f3640;
-    border-radius: 2px;
-    padding: 10px;
-    cursor: pointer;
+    color: #fff;
+    outline: none;
   }
 }
 
@@ -46,17 +38,31 @@
 }
 
 .correctly {
-  background-color: green;
+  background-color: #78e08f;
 }
 
 .wrong {
-  background-color: red;
+  background-color: #e55039;
 }
 
 .answer {
   margin: 20px;
   font-size: 16px;
   font-family: 'Lucida Sans', Verdana, sans-serif;
+
+  .question-title {
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+}
+
+.correct-answer {
+  padding: 0 20px;
+  margin-bottom: 20px; 
+  font-size: 16px;
+  font-weight: 600;
+  font-family: 'Lucida Sans', Verdana, sans-serif;
+  background-color: #78e08f;
 }
 
 .answer-form {
